--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node.js API server for logging events from React Native app",
   "main": "server.js",
   "scripts": {
+    "build": "npm install",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"No tests yet\" && exit 0"
